<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".EditTodoFragment">

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:hint="@string/edit_Title"
        android:inputType="textPersonName"
        android:textColor="#EAE3E3"
        android:textColorHint="#EAE3E3" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:hint="@string/edit_Description"
        android:inputType="textPersonName"
        android:textColor="#EAE3E3"
        android:textColorHint="#EAE3E3" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:textColor="#EAE3E3"
        android:textColorHint="#EAE3E3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="15dp"
        android:text="@string/edit_priority"
        android:textColor="#EAE3E3"
        android:textColorHint="#171616"
        android:textSize="18dp" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/rb_high"
            android:text="@string/edit_high" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/rb_medium"
            android:text="@string/edit_medium" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/rb_low"
            android:text="@string/edit_low" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0"
        android:text="@string/edit_is_complete"
        android:textColor="#EAE3E3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"

        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn_ok"
            android:text="@string/edit_save" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn_cancel"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>